--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
   "id": "/",
   "display": "standalone",
   "theme_color": "#00a080",
-  "background_color": "#ffffff",
+  "background_color": "#00a080",
 
   "description": "Help you compare prices easily.",
   "screenshots": [
